...
    case story

    var id: Self { self }

    var displayName: LocalizedStringKey {
        switch self {
        case .spotlight: "Spotlight"
        case .story: "Story"
        }
    }

    var canvasSize: CGSize {
        switch self {
        case .spotlight: CGSize(width: 360, height: 450)
...
